--- a/src/app/produits/produits.component.html
+++ b/src/app/produits/produits.component.html
@@ -1,10 +1,42 @@
 <div class="container">
   <table class=" mt-1 mb-1">
     <tr>
-      <button class="btn btn-outline-dark ">
+      <button class="btn btn-outline-dark " data-bs-toggle="modal" data-bs-target="#modalProduit">
         Ajouter un produit
         <i class="bi bi-plus-square"></i>
       </button>
+
+<!-- Modal -->
+<div class="modal fade" id="modalProduit" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Ajouter un produit</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <form>
+          <div class="mb-3">
+            <label for="recipient-name" class="col-form-label">Nom</label>
+            <input type="text" class="form-control" id="recipient-name">
+          </div>
+          <div class="mb-3">
+            <label for="message-text" class="col-form-label">Prix</label>
+            <input type="text" class="form-control" id="message-text">
+          </div>
+          <div class="mb-3 form-check">
+          <input type="checkbox" class="form-check-input">
+          <label class="form-check-label"> Ce produit est-il en promo?</label>
+        </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Annuler</button>
+        <button type="button" class="btn btn-primary">Enregistrer</button>
+      </div>
+    </div>
+  </div>
+</div>
     </tr>
    </table>
   <div class="card">
@@ -13,7 +45,7 @@
               <form>
                 <div class="input-group">
                   <label class="input-group-text">Mot clé</label>
-                  <input type="text" class="form-control" formControlName="keyword">
+                  <input type="text" class="form-control" >
                   <button class="btn btn-outline-dark"><i class="bi bi-search"></i></button>
                 </div>
               </form>
@@ -27,7 +59,26 @@
                       </tr>
                     </thead>
                     <tbody>
-                      <tr>
+                      <tr *ngFor="let p of produits">
+                        <td>{{p.id}}</td>
+                        <td>{{p.nom}}</td>
+                        <td>{{p.prix}}</td>
+                        <td>
+                          <div class="form-check form-switch" *ngIf="p.promotion == false">
+                           <input  class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+                          </div>
+                          <div class="form-check form-switch"  *ngIf="p.promotion == true">
+                           <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckChecked" checked>
+                          </div>
+                         </td>
+                         <td>
+                          <button class="btn btn-danger">
+                            <i class="bi bi-trash"></i>
+                          </button>
+                          <button class="btn">
+                            <i class="bi bi-pencil-square"></i>
+                          </button>
+                        </td>
                       </tr>
                     </tbody>
                 </table>
