--- a/src/app/produits/produits.component.html
+++ b/src/app/produits/produits.component.html
@@ -15,24 +15,24 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        <form>
+        <form [formGroup]="createFormGroup">
           <div class="mb-3">
-            <label for="recipient-name" class="col-form-label">Nom</label>
-            <input type="text" class="form-control" id="recipient-name">
+            <label for="recipient-name" class="col-form-label" >Nom</label>
+            <input type="text" class="form-control" id="recipient-name" formControlName="c_title">
+          </div>
+          <div class="mb-3">
+            <label for="recipient-name" class="col-form-label">Description</label>
+            <input type="text" class="form-control" id="recipient-name" formControlName="c_description">
           </div>
           <div class="mb-3">
             <label for="message-text" class="col-form-label">Prix</label>
-            <input type="text" class="form-control" id="message-text">
+            <input type="text" class="form-control" id="message-text"formControlName="c_price">
           </div>
-          <div class="mb-3 form-check">
-          <input type="checkbox" class="form-check-input">
-          <label class="form-check-label"> Ce produit est-il en promo?</label>
-        </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Annuler</button>
+            <button type="button" class="btn btn-primary" (click)="ajoutProduit()">Enregistrer</button>
+          </div>
         </form>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Annuler</button>
-        <button type="button" class="btn btn-primary">Enregistrer</button>
       </div>
     </div>
   </div>
@@ -42,46 +42,74 @@
   <div class="card">
       <div class="card-header">Liste des produits</div>
             <div class="card-body">
-              <form>
-                <div class="input-group">
-                  <label class="input-group-text">Mot clé</label>
-                  <input type="text" class="form-control" >
-                  <button class="btn btn-outline-dark"><i class="bi bi-search"></i></button>
-                </div>
-              </form>
+
+              <h3>Afficher {{pageSize}} éléments</h3>
                 <table class="table table-striped mb-0">
                     <thead>
                       <tr>
                         <th>ID</th>
                          <th>NOM</th>
                          <th>PRIX</th>
-                         <th>PROMO</th>
+                         <th>Description</th>
+                         <th>Créé par</th>
                       </tr>
                     </thead>
                     <tbody>
-                      <tr *ngFor="let p of produits">
+                      <tr *ngFor="let p of productJson">
                         <td>{{p.id}}</td>
-                        <td>{{p.nom}}</td>
-                        <td>{{p.prix}}</td>
-                        <td>
-                          <div class="form-check form-switch" *ngIf="p.promotion == false">
-                           <input  class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
-                          </div>
-                          <div class="form-check form-switch"  *ngIf="p.promotion == true">
-                           <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckChecked" checked>
-                          </div>
-                         </td>
+                        <td>{{p.title}}</td>
+                        <td>{{p.price}}</td>
+                        <td>{{p.description}}</td>
+                        <td>{{p.user.name}}</td>
                          <td>
-                          <button class="btn btn-danger">
+                          <button class="btn btn-danger" (click)="deleteProduit(p.id)">
                             <i class="bi bi-trash"></i>
                           </button>
-                          <button class="btn">
+                          <button class="btn" data-bs-toggle="modal" data-bs-target="#modalModifProduit" (click)="products(p.id)">
                             <i class="bi bi-pencil-square"></i>
                           </button>
+                          <div class="modal fade" id="modalModifProduit" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                            <div class="modal-dialog modal-dialog-centered">
+                              <div class="modal-content">
+                                <div class="modal-header">
+                                  <h5 class="modal-title" id="exampleModalLabel">Editer le produit</h5>
+                                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                </div>
+                                <div class="modal-body">
+                                  <form [formGroup]="productFormGroup" (ngSubmit)="modif(id)">
+                                    <div class="mb-3">
+                                      <label for="nom" class="col-form-label">Nom produit</label>
+                                      <input type="text" class="form-control" id="nom" formControlName="title" [value]="title">
+                                    </div>
+                                    <div class="mb-3">
+                                      <label for="desc" class="col-form-label">Description</label>
+                                      <textarea type="text" class="form-control" rows="5" id="desc" formControlName="description" [value]="description"></textarea>
+                                    </div>
+                                    <div class="mb-3">
+                                      <label for="prix" class="col-form-label">Prix</label>
+                                      <input type="text" class="form-control" id="prix" formControlName="prix" [value]="prix">
+                                    </div>
+                                    <div class="mb-3">
+                                      <label for="prix" class="col-form-label">Produit créé par : {{creePar}} </label>
+                                    </div>
+                                    <div class="modal-footer">
+                                      <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Annuler</button>
+                                      <button type="button" class="btn btn-success" (click)="modif(id)">Enregistrer</button>
+                                    </div>
+                                  </form>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
                         </td>
                       </tr>
                     </tbody>
                 </table>
+                 <ul class="nav nav-pills">
+                  <li *ngFor="let item of [].constructor(this.totalPages); let i =index">
+                    <a [ngClass]="i==currentPage?'btn-dark':'btn-outline-dark'" (click)="goToPage(i)" class="btn ms-2 mt-2"> {{i}}</a>
+                  </li>
+                 </ul>
               </div>
   </div>
 </div>
