--- a/src/app/dashbord/dashbord.component.html
+++ b/src/app/dashbord/dashbord.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark fa-lg gradient-custom-3 mb-3">
   <div class="container-fluid">
-    <a class="navbar-brand" href="">Gestion de stock</a>
+    <a class="navbar-brand">Gestion de stock</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -21,10 +21,10 @@
 
       </li> -->
       <li>
-        <a class="nav-link">{{user}}</a>
+        <a class="nav-link">{{name}}</a>
       </li>
       <li>
-        <a class="btn nav-link " routerLink="/">
+        <a class="btn nav-link "  (click)="deconnexion()" routerLink="/">
           <i class="bi bi-box-arrow-right"></i>
         </a>
       </li>
